0029925: Foundation Classes - add missing cast to LowerCase() and UpperCase() arguments

Argument of LowerCase() and UpperCase() is cast to int via unsigned char to avoid passing negative integer in the case if the argument char is in the extended part of ASCII table (which would result in undefined behavior according to C++ standard).